# algorithms

./: .gitignore  CMakeLists.txt
searching/: CMakeLists.txt
searching/include/jab/searching/: binary_search.hpp  linear_search.hpp
searching/include/searching/: binary_search.hpp
searching/src/: binary_search.hpp  linear_search.hpp  main.cc
searching/test/: CMakeLists.txt  run_binary_search_test.cc  run_linear_search_test.cc  run_tests.cc
sorting/: CMakeLists.txt
sorting/include/jab/sorting/: insertion_sort.hpp  merge_sort.hpp  selection_sort.hpp
sorting/include/sorting/: insertion_sort.hpp  selection_sort.hpp
sorting/src/: insertion_sort.hpp  main.cc  selection_sort.hpp
sorting/test/: CMakeLists.txt  run_insertion_sort_test.cc  run_merge_sort_test.cc  run_selection_sort_test.cc  run_tests.cc
utility/: CMakeLists.txt
utility/include/jab/utils/: utils.hpp
utility/include/jab_utils/: utils.hpp
utility/src/: utils.hpp
